deployment/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crafty-project
  namespace: crafty
spec:
  selector:
    matchLabels:
      app: crafty
  template:
    metadata:
      labels:
        app: crafty
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
          image: kuranasaki/crafty-frontend:latest
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          ports:
          - containerPort: 3000
        - name: backend
          imagePullPolicy: Always
          image: kuranasaki/crafty-backend:latest
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          ports:
          - containerPort: 8000
