deployment/kube/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: crafty-service
  namespace: crafty
spec:
  selector:
    app: crafty
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: backend
      protocol: TCP
      port: 8000
      targetPort: 8000
